2010-01-13  Krzesimir Nowak  <qdlacz@gmail.com>

	* ChangeLog: Auto-generated when releasing. If you are seeing this,
	use 'git log' for a detailed list of changes.