@@ -225,11 +225,14 @@ void TestWindow::show_icons_toggled()
 int
 main (int argc, char *argv[])
 {
-  Gtk::Main kit(argc, argv);
+  Glib::RefPtr<Gtk::Application> app =
+    Gtk::Application::create(argc, argv,
+      "org.gtksourceviewmm.test");
   Gsv::init();
+
   TestWindow window;
 
   window.show_all();
-  kit.run(window);
+  app->run(window);
   return 0;
 }
