@@ -5,7 +5,10 @@
 int
 main (int argc, char* argv[])
 {
-    Gtk::Main kit (argc, argv) ;
+    Glib::RefPtr<Gtk::Application> app =
+        Gtk::Application::create(argc, argv,
+            "org.gtksourceviewmm.test");
+
     Gsv::init () ;
 
     Gsv::View view ;
@@ -15,6 +18,7 @@ main (int argc, char* argv[])
     } else {
         std::cout << "FAILED" << std::endl;
     }
+
     return 0 ;
 }
 
